Adicionada rota que devolve todos os votos.
